- `container scan` staged artifacts (`safe_run_receipt.json`, README, capability/adapter analysis JSON) now use per-file stage/finalize writes.
- Host update staging now writes `host_self_manifest.json` with per-file stage/finalize semantics before host-root swap.
- Added compare/ticket-pack regression assertions that fail on any finalized-output `*.stage` file residue.
- GitHub Actions integration added for deterministic CI artifact-meter runs:
- Added workflow: `.github/workflows/weftend_artifact_meter.yml`
- Workflow runs `safe-run` (analysis-only, `--withhold-exec`) with optional compare and uploads `out/ci_meter` artifacts.
- Added workflow: `.github/workflows/weftend_verify360.yml`
- Workflow runs strict managed verify gate (`npm run verify:360:release:managed`) and uploads `out/verify_360_release_managed` artifacts.
- Verify workflow now pins strict release fixture smoke input (`WEFTEND_RELEASE_DIR=tests/fixtures/release_demo`) and clears skip override (`WEFTEND_ALLOW_SKIP_RELEASE=""`).
- Added usage guide: `docs/GITHUB_ACTIONS.md`
- Quickstart now documents both GitHub workflows (`weftend_artifact_meter` and `weftend_verify360`) including managed verify command/output path.
- Release checklist now includes optional GitHub Actions parity runs for both workflows before publish.
- Release checklist now includes immutable-release change record checks (`CHANGELOG.md` and `docs/RELEASE_NOTES.txt` sync).
- Release checklist now also calls out managed strict gate release-smoke env enforcement (`WEFTEND_RELEASE_DIR`, `WEFTEND_ALLOW_SKIP_RELEASE`).
- Legacy release checklist doc now explicitly points to active `docs/RELEASE_CHECKLIST_ALPHA.md` flow.
- Release announcement draft (`docs/RELEASE_ANNOUNCEMENT.txt`) refreshed to align with current adapter/verify/workflow scope.
- Release bundle sidecar set now includes `CHANGELOG.md` so immutable history is shipped with release uploads.